Fix issue where display link overflows parent

--- a/src/TweetDisplay/index.module.css
+++ b/src/TweetDisplay/index.module.css
@@ -13,6 +13,7 @@
   height: 100%;
   display: block;
   padding: 1.2rem;
+  box-sizing: border-box;
 }
 
 .tweet:hover {
